--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <mybatis.version>3.5.4</mybatis.version>
         <pagehelper.version>5.1.11</pagehelper.version>
         <redis.version>3.1.0</redis.version>
+        <commons.version>3.10</commons.version>
     </properties>
 
     <dependencies>
@@ -77,6 +78,12 @@
             <artifactId>shiro-spring</artifactId>
             <version>1.5.3</version>
         </dependency>
+        <!-- 配置文件自动映射 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -88,6 +95,11 @@
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
             <version>${pagehelper.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
