--- a/src/main/resources/blog.properties
+++ b/src/main/resources/blog.properties
@@ -5,7 +5,7 @@ blog.shiro.session_timeout=3600
 # rememberMe cookie有效时长，单位为秒
 blog.shiro.cookie_timeout=86400
 # 免认证的路径配置，如静态资源等
-blog.shiro.anon_url=/blog/**,/test/**
+blog.shiro.anon_url=/blog/**,/test/**,/ui/**
 # 登录 url
 blog.shiro.login_url=/login
 # 首页 url
