--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,18 @@ spring:
       content-type: text/html
     mode: HTML
     cache: false
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    password:
+    jedis:
+      pool:
+        max-idle: 500
+        min-idle: 0
+        max-wait: -1
+        max-active: 8
+    lettuce:
+      shutdown-timeout: 0
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.whkj.project.mapper
