--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,16 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.github.whvcse/easy-captcha -->
         <dependency>
             <groupId>com.github.whvcse</groupId>
