--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,6 +48,8 @@ spring:
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.whkj.project.mapper
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 #pagehelper分页插件
 pagehelper:
   helperDialect: mysql
