--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <httpclient.version>4.5.6</httpclient.version>
         <mysql.version>5.1.35</mysql.version>
         <mybatis.version>3.5.4</mybatis.version>
-        <pagehelper.version>5.1.11</pagehelper.version>
+        <pagehelper.version>1.2.5</pagehelper.version>
         <redis.version>3.1.0</redis.version>
         <commons.version>3.10</commons.version>
     </properties>
@@ -119,7 +119,7 @@
         </dependency>
         <dependency>
             <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>${pagehelper.version}</version>
         </dependency>
         <dependency>
