--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,11 +36,16 @@ spring:
         max-active: 8
     lettuce:
       shutdown-timeout: 0
-mybatis:
-  mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.whkj.project.mapper
+mybatis-plus:
+  mapper-Locations: classpath:mapper/*.xml
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    call-setters-on-nulls: true # 数据库查询为空字段，不映射
+    map-underscore-to-camel-case: true  # 数据库_对象转驼峰自动转换
+  global-config:
+    db-config: # 逻辑删除配置
+      logic-not-delete-value: 1 # 删除前
+      logic-delete-value: 0 # 删除后
 #minio
 minio:
   bucket: home
